<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab2"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="5dp"
            android:entries="@array/ctype"></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_jiaobanguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jiaobankai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id="@+id/btn_posuiguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/posuikai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_xieliaoguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/xieliaokai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="240dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_yureguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/yurekai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id="@+id/btn_hongganguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/honggankai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_chuweiguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/chuwei"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="240dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_junzhongguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/junzhongkai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id="@+id/btn_fuliaoguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fuliaokai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_bengzhanguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/bengzhan"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="240dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_shusongguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/shusong"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id="@+id/btn_tuichuguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tuichu"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_jieruguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jieru"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="240dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_fudaiguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fudaikai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id="@+id/btn_pingjiaoguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pingjiaokai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_baojingguan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/baojing"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="240dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juanshe"
            android:textSize="25sp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="15dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="15dp"
            android:entries="@array/ctype"></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"/>
        <Button
            android:id="@+id/btn_1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="160dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="250dp"/>
        <Button
            android:id="@+id/btn_3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="280dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"/>
        <Button
            android:id="@+id/btn_4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_5"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="160dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="250dp"/>
        <Button
            android:id="@+id/btn_6"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="280dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"/>
        <Button
            android:id="@+id/btn_7"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8#"
            android:layout_centerVertical="true"
            android:textSize="23sp"
            android:layout_marginLeft="130dp"/>
        <Button
            android:id="@+id/btn_8"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/qingwukai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="160dp"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/jiebodai"
            android:background="@color/red"
            android:textSize="23sp"
            android:layout_marginLeft="260dp"/>
    </RelativeLayout>
</LinearLayout>